# cpu-g

./: .gitignore  AUTHORS  README  README.md  launch.sh  pyproject.toml  requirements.txt
data/: cpu-g.desktop
debian/: changelog  control  copyright  cpu-g.install  files  install  rules
po/: ca.po  es.po  eu_ES.po  nl.po  po.pot  tr.po
src/: comun.py  cpug.py  distro.py  investigator.py  monitor_battery.py  samples.py  test.py  upower.py
