[project]
name = "cpu-g"
version = "0.16.3"
description = "Add your description here"
authors = [
    { name = "Lorenzo Carbonell <atareao@atareao.es", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "cycler==0.12.1",
    "contourpy==1.2.0",
    "dbus-python==1.3.2",
    "fonttools==4.47.0",
    "kiwisolver==1.4.5",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "packaging==23.2",
    "pillow==10.3.0",
    "psutil==5.9.7",
    "pycairo==1.25.1",
    "pygobject==3.46.0",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "six==1.16.0",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cpu_g"]
